# WebPilot-Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  resume-architecture.md
examples/: arxiv_task.yaml  github_task.yaml  huggingface_task.yaml  paperswithcode_task.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
tests/: test_agent_graph.py  test_api.py  test_evaluator.py  test_models.py  test_planner.py  test_skills.py  test_task_runtime.py
webpilot/: api.py  cli.py  i18n.py  llm.py  mcp_server.py  models.py  rag.py  settings.py  sites.py  task_runtime.py  translator.py
webpilot/agents/: arxiv_api.py  extractor.py  graph.py  llm_planner.py  planner.py  reporter.py  state.py  verifier.py
webpilot/browser/: actions.py  client.py  observer.py
webpilot/evals/: evaluator.py  tasks.yaml
webpilot/skills/: __init__.py  base.py  builtins.py  registry.py
webpilot/web/: __init__.py  extractor.py  semantic_ingest.py  tavily_search.py
webpilot/workflows/: research.py
